--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bitcoin-lib",
   "version": "1.0.0",
   "description": "A simple bitcoin library written in JavaScript.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
