--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/CryptoLabSite/bitcoin-lib#readme",
   "devDependencies": {
-    "jest": "^29.6.4"
+    "@jest/globals": "^29.6.4",
+    "@types/jest": "^29.5.4",
+    "jest": "^29.6.4",
+    "ts-jest": "^29.1.1"
   },
   "dependencies": {
     "smart-buffer": "^4.2.0"
