--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A simple bitcoin library written in JavaScript.",
   "main": "",
   "scripts": {
+    "format": "prettier --write \"src/**/*.ts\" \"__tests__/**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "build": "tsc",
     "test": "jest"
   },
@@ -22,9 +24,16 @@
     "@jest/globals": "^29.6.4",
     "@types/jest": "^29.5.4",
     "jest": "^29.6.4",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "smart-buffer": "^4.2.0"
   }
 }
