--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\" \"__tests__/**/*.ts\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,__test__}/**/*.ts\" --fix",
     "build": "tsc",
     "test": "jest"
   },
